--- a/web_project/polls/templates/polls/index.html
+++ b/web_project/polls/templates/polls/index.html
@@ -6,7 +6,7 @@ Home
 {% block content %}
 <h2>Select an app to run:</h2>
 <ul>
-    <li><a href="polls/">Polls app site (Python + Django + Sqlite3)</a></li>
+    <li><a href="polls/">Polls app site (Python + Django + PostgreSQL)</a></li>
     <li><a href="admin/">Polls admin site</a></li>
 </ul>
 <h2>Select a sister website to browse:</h2>
