--- a/web_project/polls/templates/polls/results.html
+++ b/web_project/polls/templates/polls/results.html
@@ -10,6 +10,6 @@ Results
     <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
     {% endfor %}
 </ul>
-<a href="{% url 'polls:detail' question.id %}">Vote again?</a><br>
+<a href="{% url 'polls:detail' question.question_id %}">Vote again?</a><br>
 <a href="{% url 'polls:question' %}">Back to questions</a>
 {% endblock %}
