--- a/web_project/polls/templates/polls/layout_general.html
+++ b/web_project/polls/templates/polls/layout_general.html
@@ -14,16 +14,17 @@
         <a href="{% url 'polls:about' %}" class="navbar-item">About</a>
         <a href="{% url 'polls:contact' %}" class="navbar-item">Contact</a>
         <a href="{% url 'polls:email' %}" class="navbar-item">Email</a>
+        <a href="{% url 'polls:barcode_req' %}" class="navbar-item">Barcode</a>
     </div>
 
     <div class="body-content">
         {% block content %}
         {% endblock %}
-        <hr />
-        <footer>
-            <p>© Winter WinnPy 2020</p>
-        </footer>
     </div>
+    <footer>
+        <hr />
+        <p>© Winter WinnPy 2020</p>
+    </footer>
 </body>
 
 </html>
