added contact.html and contact form, and send email to webmaster

--- a/web_project/polls/templates/polls/barcode_disp.html
+++ b/web_project/polls/templates/polls/barcode_disp.html
@@ -1,4 +1,4 @@
-{% extends "polls/layout_general.html" %}
+{% extends "polls/layout_generic.html" %}
 {% block title %}
 Barcode Generator
 {% endblock %}
@@ -6,6 +6,8 @@ Barcode Generator
 {% block content %}
 
 <h2>Here is your barcode.</h2>
+
+
 
 
 {% endblock %}
