--- a/web_project/polls/templates/polls/layout_generic.html
+++ b/web_project/polls/templates/polls/layout_generic.html
@@ -21,10 +21,10 @@
         {% block content %}
         {% endblock %}
     </div>
-    <footer>
-        <hr />
-        <p>© Winter WinnPy 2020</p>
-    </footer>
+    <div class='footer'>
+        <hr/>
+        <p>© Winter WinnPy 2019 - 2020</p>
+    </div>
 </body>
 
 </html>
