--- a/web_project/polls/static/polls/polls_style.css
+++ b/web_project/polls/static/polls/polls_style.css
@@ -53,9 +53,9 @@ div a {
     color: red;
 }
 
-footer {
-    clear: both;
-    position: relative;
-    height: 200px;
-    margin-top: -200px;
+.footer {
+    padding: 5pt;
+    /* background-color: rgba(0, 150, 0, .8); */
+    position: sticky;
+    bottom: 0;
 }
