--- a/web_project/polls/templates/polls/contact_old.html
+++ b/web_project/polls/templates/polls/contact_old.html
@@ -9,14 +9,8 @@ Contact us
 <p>Send a message to Winter the webmaster:</p>
 <form action="{% url 'polls:contact' %}" method="post">
     {% csrf_token %}
-    {% for field in form %}
-        <div class="fieldWrapper">
-            {{ field.errors }}
-            {{ field.label_tag }}: <br> 
-            {{ field }}
-        </div>
-    {% endfor %}
-    <input type="submit" value="Send Message">
+    {{ form.as_p }}
+    <input type="submit" value="Submit">
 </form>
 
 {% endblock %}
