--- a/web_project/templates/admin/base_site.html
+++ b/web_project/templates/admin/base_site.html
@@ -3,7 +3,12 @@
 {% block title %}{{ title }} | {{ site_title|default:_('Polls site admin') }}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'admin:index' %}">Polls Administration</a></h1>
+<h1 id="site-name">
+    <a href="{% url 'admin:index' %}">
+        Polls Administration
+
+    </a>
+</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
