--- a/web_project/polls/templates/polls/layout_generic.html
+++ b/web_project/polls/templates/polls/layout_generic.html
@@ -14,18 +14,17 @@
         <a href="{% url 'polls:about' %}" class="navbar-item">About</a>
         <a href="{% url 'polls:contact' %}" class="navbar-item">Contact</a>
         <a href="{% url 'polls:email' %}" class="navbar-item">Email</a>
+        <a href="{% url 'polls:upload_file' %}" class="navbar-item">Upload File</a>
         <a href="{% url 'polls:barcode_req' %}" class="navbar-item">Barcode</a>
     </div>
+
     <div class="body-content">
         {% block content %}
         {% endblock %}
     </div>
     <div class='footer'>
         <hr/>
-        <h3 style='color:antiquewhite'>
-            © Winter WinnPy 2019 - 2020. <br> 
-            It is {% now "SHORT_DATETIME_FORMAT" %}
-        </h3>
+        <p>© Winter WinnPy 2019-2020<br>domain: {{ domain }}</p>
     </div>
 </body>
 
