--- a/web_project/polls/templates/polls/successful.html
+++ b/web_project/polls/templates/polls/successful.html
@@ -1,8 +1,8 @@
 {% extends "polls/layout_generic.html" %}
 {% block title %}
-Email Sent Successfully
+Email Sent
 {% endblock %}
 
 {% block content %}
-Email has been sent successfully!
+{{ msg_text }}
 {% endblock %}
