--- a/web_project/polls/templates/polls/about copy.html
+++ b/web_project/polls/templates/polls/about copy.html
@@ -3,5 +3,5 @@
 About us
 {% endblock %}
 {% block content %}
-<p>About page is coming soon.</p>
+<p>About page for the Visual Studio Code Django tutorial.</p>
 {% endblock %}
