--- a/web_project/polls/templates/polls/upload_file.html
+++ b/web_project/polls/templates/polls/upload_file.html
@@ -1,22 +1,23 @@
 {% extends "polls/layout_generic.html" %}
 
 {% block title %}
-Contact us
+Upload File
 {% endblock %}
 
 {% block content %}
 
-<p>Send a message to Winter (the awsome webmaster):</p>
-<form action="{% url 'polls:contact' %}" method="post">
+<p>Upload a file:</p>
+<form action="{% url 'polls:upload_file' %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {% for field in form %}
         <div class="fieldWrapper">
             {{ field.errors }}
-            {{ field.label_tag }}: <br> 
+            {{ field.label_tag }} <br> 
             {{ field }}
         </div>
     {% endfor %}
-    <input type="submit" value="Send Message">
+    </p>
+    <input type="submit" value="Upload">
 </form>
 
 {% endblock %}
