--- a/web_project/accounts/templates/accounts/base.html
+++ b/web_project/accounts/templates/accounts/base.html
@@ -13,7 +13,7 @@
     {% block body %} 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="{% url 'index' %}">Winter WinnPy</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" 
                       aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
