--- a/web_project/polls/templates/polls/base.html
+++ b/web_project/polls/templates/polls/base.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <title>{% block title %}Winn Polls{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'accounts/app.css' %}">
+    <link rel="stylesheet" href="{% static 'accounts/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'accounts/css/app.css' %}">
     {% block stylesheet %}{% endblock %}  <!-- HERE -->
   </head>
   <body>
@@ -19,22 +18,41 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="mainMenu">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="#">{{ user.username }}</a>
-              </li>
-            </ul>
+            {% if user.is_authenticated %}
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{ user.username }}
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                    <a class="dropdown-item" href="#">My account</a>
+                    <a class="dropdown-item" href="#">Change password</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                  </div>
+                </li>
+              </ul>
+            {% else %}
+              <form class="form-inline ml-auto">
+                <a href="#" class="btn btn-outline-secondary">Log in</a>
+                <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+              </form>
+            {% endif %}    
           </div>
         </div>
       </nav>
       <div class="container">
         <ol class="breadcrumb my-4">
           {% block breadcrumb %}
+          WinnPy
           {% endblock %}
         </ol>
         {% block content %}
         {% endblock %}
       </div>
     {% endblock body %}
+    <script src="{% static 'accounts/js/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'accounts/js/popper.min.js' %}"></script>
+    <script src="{% static 'accounts/js/bootstrap.min.js' %}"></script>
   </body>
 </html>
