--- a/web_project/accounts/templates/accounts/signup.html
+++ b/web_project/accounts/templates/accounts/signup.html
@@ -1,16 +1,8 @@
-{% extends 'accounts/base.html' %}
+{% extends 'accounts/base_accounts.html' %}
 
-{% load static %}
+{% block title %}Sign up to Django Boards{% endblock %}
 
-{% block stylesheet %}
-  <link rel="stylesheet" href="{% static 'accounts/css/accounts.css' %}">
-{% endblock %}
-
-{% block body %}
-<div class="container">
-  <h1 class="text-center logo my-4">
-    <a href="{% url 'index' %}">Winter WinnPy</a>
-  </h1>
+{% block content %}
   <div class="row justify-content-center">
     <div class="col-lg-8 col-md-10 col-sm-12">
       <div class="card">
@@ -23,10 +15,9 @@
           </form>
         </div>
         <div class="card-footer text-muted text-center">
-          Already have an account? <a href="#">Log in</a>
+          Already have an account? <a href="{% url 'login' %}">Log in</a>
         </div>
       </div>
     </div>
   </div>
-</div>
 {% endblock %}
