--- a/web_project/polls/templates/polls/layout_generic.html
+++ b/web_project/polls/templates/polls/layout_generic.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="navbar">
-        <a href="{% url 'index' %}" class="navbar-brand">Home</a>
+        <a href="{% url 'home' %}" class="navbar-brand">Home</a>
         <a href="{% url 'polls:about' %}" class="navbar-item">About</a>
         <a href="{% url 'polls:contact' %}" class="navbar-item">Contact</a>
         <a href="{% url 'polls:email' %}" class="navbar-item">Email</a>
