--- a/web_project/templates/base.html
+++ b/web_project/templates/base.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <title>{% block title %}Winn Polls{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'accounts/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'accounts/css/app.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/app.css' %}">
     {% block stylesheet %}{% endblock %}  <!-- HERE -->
   </head>
   <body>
     {% block body %} 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="{% url 'index' %}">Winter WinnPy</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Winter WinnPy</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" 
                       aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
               </ul>
             {% else %}
               <form class="form-inline ml-auto">
-                <a href="#" class="btn btn-outline-secondary">Log in</a>
+                <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
                 <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
               </form>
             {% endif %}    
@@ -50,8 +50,8 @@
         {% endblock %}
       </div>
     {% endblock body %}
-    <script src="{% static 'accounts/js/jquery-3.4.1.min.js' %}"></script>
-    <script src="{% static 'accounts/js/popper.min.js' %}"></script>
-    <script src="{% static 'accounts/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
