django-admin startapp boards

--- a/web_project/accounts/static/accounts/css/accounts.css
+++ b/web_project/accounts/static/accounts/css/accounts.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../img/just-waves.png);
+    background-image: url(../img/checkerboard-cross.png);
   }
   
   .logo {
