--- a/web_project/accounts/templates/accounts/base_accounts.html
+++ b/web_project/accounts/templates/accounts/base_accounts.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block stylesheet %}
-  <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+  <link rel="stylesheet" href="{% static 'accounts/css/accounts.css' %}">
 {% endblock %}
 
 {% block body %}
