--- a/web_project/accounts/templates/accounts/signup.html
+++ b/web_project/accounts/templates/accounts/signup.html
@@ -1,6 +1,6 @@
 {% extends 'accounts/base_accounts.html' %}
 
-{% block title %}Sign up to Django Boards{% endblock %}
+{% block title %}Sign up to Winter WinnPy{% endblock %}
 
 {% block content %}
   <div class="row justify-content-center">
