--- a/web_project/boards/templates/boards/boards.html
+++ b/web_project/boards/templates/boards/boards.html
@@ -2,7 +2,29 @@
 
 
 {% block content %}
-  {% for board in boards %}
-    {{ board.name }} <br>
-  {% endfor %}
+
+<table class="table">
+  <thead class="thead-inverse">
+    <tr>
+      <th>Board</th>
+      <th>Posts</th>
+      <th>Topics</th>
+      <th>Last Post</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for board in boards %}
+      <tr>
+        <td>
+          <a href="{% url 'boards:board_topics' board.pk %}">{{ board.name }}</a>
+          <small class="text-muted d-block">{{ board.description }}</small>
+        </td>
+        <td class="align-middle">0</td>
+        <td class="align-middle">0</td>
+        <td></td>
+      </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
 {% endblock %}
