--- a/web_project/templates/base.html
+++ b/web_project/templates/base.html
@@ -1,8 +1,9 @@
-{% load static %}<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>{% block title %}Winn Polls{% endblock %}</title>
+    {% load static %}
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
