--- a/web_project/polls/templates/polls/index.html
+++ b/web_project/polls/templates/polls/index.html
@@ -11,7 +11,7 @@ Home
     <li><a href="boards/">Boards</a></li>
 </ul>
 <ul>
-    <li><a href="polls/">Polls (Python + Django + PostgreSQL)</a></li>
+    <li><a href="polls/">Polls</a></li>
 </ul>
 <ul>
     <li><a href="admin/">Admin site</a></li>
