moved password reset and change to be in accounts

--- a/web_project/accounts/templates/accounts/base_accounts.html
+++ b/web_project/accounts/templates/accounts/base_accounts.html
@@ -9,7 +9,7 @@
 {% block body %}
   <div class="container">
     <h1 class="text-center logo my-4">
-      <a href="{% url 'home' %}">Winter WinnPy</a>
+      <a href="{% url 'home' %}">Winter Winn</a>
     </h1>
     {% block content %}
     {% endblock %}
