--- a/web_project/accounts/templates/accounts/password_reset_confirm.html
+++ b/web_project/accounts/templates/accounts/password_reset_confirm.html
@@ -25,7 +25,7 @@
             <div class="alert alert-danger" role="alert">
               It looks like you clicked on an invalid password reset link. Please try again.
             </div>
-            <a href="{% url 'password_reset' %}" class="btn btn-secondary btn-block">Request a new password reset link</a>
+            <a href="{% url 'accounts:password_reset' %}" class="btn btn-secondary btn-block">Request a new password reset link</a>
           {% endif %}
         </div>
       </div>
