--- a/web_project/accounts/templates/accounts/password_reset_complete.html
+++ b/web_project/accounts/templates/accounts/password_reset_complete.html
@@ -11,7 +11,7 @@
           <div class="alert alert-success" role="alert">
             You have successfully changed your password! You may now proceed to log in.
           </div>
-          <a href="{% url 'login' %}" class="btn btn-secondary btn-block">Return to log in</a>
+          <a href="{% url 'accounts:login' %}" class="btn btn-secondary btn-block">Return to log in</a>
         </div>
       </div>
     </div>
