--- a/web_project/accounts/templates/accounts/signup.html
+++ b/web_project/accounts/templates/accounts/signup.html
@@ -15,7 +15,7 @@
           </form>
         </div>
         <div class="card-footer text-muted text-center">
-          Already have an account? <a href="{% url 'login' %}">Log in</a>
+          Already have an account? <a href="{% url 'accounts:login' %}">Log in</a>
         </div>
       </div>
     </div>
