--- a/web_project/templates/base.html
+++ b/web_project/templates/base.html
@@ -27,16 +27,16 @@
                   </a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
                     <a class="dropdown-item" href="#">My account</a>
-                    <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
+                    <a class="dropdown-item" href="{% url 'accounts:password_change' %}">Change password</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                    <a class="dropdown-item" href="{% url 'accounts:logout' %}">Log out</a>
                   </div>
                 </li>
               </ul>
             {% else %}
               <form class="form-inline ml-auto">
-                <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
-                <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+                <a href="{% url 'accounts:login' %}" class="btn btn-outline-secondary">Log in</a>
+                <a href="{% url 'accounts:signup' %}" class="btn btn-primary ml-2">Sign up</a>
               </form>
             {% endif %}    
           </div>
