--- a/web_project/polls/templates/polls/layout_generic.html
+++ b/web_project/polls/templates/polls/layout_generic.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>{% block title %}{% endblock %}</title>
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'polls/polls_style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/css/polls.css' %}">
 </head>
 
 <body>
