--- a/web_project/polls/static/polls/css/polls.css
+++ b/web_project/polls/static/polls/css/polls.css
@@ -42,6 +42,13 @@ li a {
 
 ul li a {
     text-decoration: none;
+    margin: 10px, 10px;
+}
+
+.sibling-site {
+    text-decoration: none;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 div a {
