added post reply

--- a/web_project/boards/templates/boards/boards.html
+++ b/web_project/boards/templates/boards/boards.html
@@ -1,5 +1,8 @@
 {% extends "boards/base_boards.html" %}
 
+{% block breadcrumb %}
+<li class="breadcrumb-item">Winter's Boards</li>
+{% endblock %}  
 
 {% block content %}
 
