--- a/web_project/boards/templates/boards/board_topics.html
+++ b/web_project/boards/templates/boards/board_topics.html
@@ -19,19 +19,19 @@
   <thead class="thead-inverse">
     <tr>
       <th>Topic</th>
-      <th>Starter</th>
+      <th>Started by</th>
       <th>Replies</th>
       <th>Views</th>
       <th>Last Update</th>
     </tr>
   </thead>
   <tbody>
-    {% for topic in board.topics.all %}
+    {% for topic in topics %}
       <tr>
         <td><a href="{% url 'boards:topic_posts' board.pk topic.pk %}">{{ topic.subject }}</a></td>
         <td>{{ topic.starter.username }}</td>
-        <td>0</td>
-        <td>0</td>
+        <td>{{ topic.replies }}</td>
+        <td>{{ topic.views}}</td>
         <td>{{ topic.last_updated }}</td>
       </tr>
     {% endfor %}
