--- a/web_project/boards/templates/boards/boards.html
+++ b/web_project/boards/templates/boards/boards.html
@@ -1,7 +1,7 @@
 {% extends "boards/base_boards.html" %}
 
 {% block breadcrumb %}
-<li class="breadcrumb-item">Winter's Boards</li>
+<li class="breadcrumb-item active">Winter's Boards</li>
 {% endblock %}  
 
 {% block content %}
@@ -22,9 +22,27 @@
           <a href="{% url 'boards:board_topics' board.pk %}">{{ board.name }}</a>
           <small class="text-muted d-block">{{ board.description }}</small>
         </td>
-        <td class="align-middle">0</td>
-        <td class="align-middle">0</td>
-        <td></td>
+        <td class="align-middle">
+          {{ board.get_posts_count }}
+        </td>
+        <td class="align-middle">
+          {{ board.topics.count }}
+        </td>
+        <td class="align-middle">
+          {% with post=board.get_last_post %}
+          {% if post %}
+            <small>
+              <a href="{% url 'boards:topic_posts' board.pk post.topic.pk %}">
+                By {{ post.created_by.username }} at {{ post.created_at }}
+              </a>
+            </small>
+          {% else %}
+            <small class="text-muted">
+              <em>No posts yet.</em>
+            </small>      
+          {% endif %}
+        {% endwith %}
+        </td>
       </tr>
     {% endfor %}
   </tbody>
