--- a/web_project/accounts/templates/accounts/signup.html
+++ b/web_project/accounts/templates/accounts/signup.html
@@ -1,7 +1,9 @@
 {% extends 'accounts/base_accounts.html' %}
 
-{% block title %}Sign up to Winter WinnPy{% endblock %}
-
+{% block title %}Winter Winn - Sign Up{% endblock %}
+{% block breadcrumb %}
+  <li class="breadcrumb-item active">Sign Up</li>
+{% endblock %}
 {% block content %}
   <div class="row justify-content-center">
     <div class="col-lg-8 col-md-10 col-sm-12">
