--- a/web_project/accounts/templates/accounts/login.html
+++ b/web_project/accounts/templates/accounts/login.html
@@ -1,7 +1,9 @@
 {% extends 'accounts/base_accounts.html' %}
 
 {% block title %}Log in to Winter Winn{% endblock %}
-
+{% block breadcrumb %}
+  <li class="breadcrumb-item active">Log in</li>
+{% endblock %}
 {% block content %}
   <div class="row justify-content-center">
     <div class="col-lg-4 col-md-6 col-sm-8">
