--- a/web_project/boards/templates/boards/topic_posts.html
+++ b/web_project/boards/templates/boards/topic_posts.html
@@ -15,7 +15,7 @@
   <a href="{% url 'boards:reply_topic' topic.board.pk topic.pk %}" class="btn btn-primary" role="button">Reply</a>
 </div>
 
-{% for post in topic.posts.all %}
+{% for post in posts %}
   <div class="card mb-2 {% if forloop.first %}border-dark{% endif %}">
     {% if forloop.first %}
     <div class="card-header text-white bg-dark py-2 px-3">{{ topic.subject }}</div>
@@ -48,5 +48,7 @@
     </div>
   </div>
 {% endfor %}
+
+{% include 'includes/pagination.html' %}
 
 {% endblock %}
