--- a/web_project/templates/base.html
+++ b/web_project/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}Winn Polls{% endblock %}</title>
+    <title>{% block title %}Winter Winn{% endblock %}</title>
     {% load static %}
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -26,7 +26,7 @@
                     {{ user.username }}
                   </a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                    <a class="dropdown-item" href="#">My account</a>
+                    <a class="dropdown-item" href="{% url 'accounts:my_account' %}">My account</a>
                     <a class="dropdown-item" href="{% url 'accounts:password_change' %}">Change password</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'accounts:logout' %}">Log out</a>
