--- a/web_project/boards/templates/boards/edit_post.html
+++ b/web_project/boards/templates/boards/edit_post.html
@@ -1,6 +1,13 @@
 {% extends "boards/base_boards.html" %}
 
-{% block title %}Edit post{% endblock %}
+{% load static %}
+
+{% block title %}Winter Winn - Edit post{% endblock %}
+
+{% block stylesheet %}
+  <link rel="stylesheet" href="{% static 'boards/css/simplemde.min.css' %}">
+  <link rel="stylesheet" href="{% static 'boards/css/boards.css' %}">
+{% endblock %}
 
 {% block breadcrumb %}
   <li class="breadcrumb-item"><a href="{% url 'boards:boards_home' %}">Winter'sBoards</a></li>
@@ -16,4 +23,11 @@
     <button type="submit" class="btn btn-success">Save changes</button>
     <a href="{% url 'boards:topic_posts' post.topic.board.pk post.topic.pk %}" class="btn btn-outline-secondary" role="button">Cancel</a>
   </form>
+{% endblock %}
+
+{% block javascript %}
+  <script src="{% static 'boards/js/simplemde.min.js' %}"></script>
+  <script>
+    var simplemde = new SimpleMDE();
+  </script>
 {% endblock %}
