--- a/web_project/boards/templates/boards/reply_topic.html
+++ b/web_project/boards/templates/boards/reply_topic.html
@@ -2,8 +2,18 @@
 
 {% load static %}
 
-{% block title %}
-  Post a reply
+{% block title %}Winter Winn - Post a reply{% endblock %}
+
+{% block stylesheet %}
+  <link rel="stylesheet" href="{% static 'boards/css/simplemde.min.css' %}">
+  <link rel="stylesheet" href="{% static 'boards/css/boards.css' %}">
+{% endblock %}
+
+{% block javascript %}
+  <script src="{% static 'boards/js/simplemde.min.js' %}"></script>
+  <script>
+    var simplemde = new SimpleMDE();
+  </script>
 {% endblock %}
 
 {% block breadcrumb %}
@@ -14,13 +24,13 @@
 {% endblock %}
 
 {% block content %}
-<form method="post" class="mb-4">
+<form method="post" class="mb-4" novalidate>
   {% csrf_token %}
   {% include 'includes/form.html' %}
   <button type="submit" class="btn btn-success">Post a reply</button>
+  <a href="{% url 'boards:topic_posts' topic.board.pk topic.pk %}" class="btn btn-outline-secondary" role="button">Cancel</a>
 </form>
-
-{% for post in topic.posts.all %}
+{% for post in posts %}
   <div class="card mb-2">
     <div class="card-body p-3">
       <div class="row mb-3">
@@ -30,10 +40,11 @@
         <div class="col-6 text-right">
           <small class="text-muted">{{ post.created_at }}</small>
         </div>
+
       </div>
-      {{ post.message }}
+      {{ post.get_message_as_markdown }}
     </div>
   </div>
 {% endfor %}
-
 {% endblock %}
+
