--- a/web_project/accounts/templates/accounts/password_change_done.html
+++ b/web_project/accounts/templates/accounts/password_change_done.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'accounts/base_accounts.html' %}
 
 {% block title %}Change password successful{% endblock %}
 
