--- a/web_project/boards/templates/boards/board_topics.html
+++ b/web_project/boards/templates/boards/board_topics.html
@@ -1,7 +1,9 @@
 {% extends "boards/base_boards.html" %}
 
+{% load humanize %}
+
 {% block title %}
-  {{ board.name }} - {{ block.super }}
+  {{ block.super }} - {{ board.name }} 
 {% endblock %}
 
 {% block breadcrumb %}
@@ -10,13 +12,12 @@
 <li class="breadcrumb-item active">Topics</li>
 {% endblock %}
 
-
 {% block content %}
 <div class="mb-4">
   <a href="{% url 'boards:new_topic' board.pk %}" class="btn btn-primary">New topic</a>
 </div>
 
-<table class="table">
+<table class="table table-striped mb-4">
   <thead class="thead-inverse">
     <tr>
       <th>Topic</th>
@@ -28,12 +29,26 @@
   </thead>
   <tbody>
     {% for topic in topics %}
+      {% url 'boards:topic_posts' board.pk topic.pk as topic_url %}
       <tr>
-        <td><a href="{% url 'boards:topic_posts' board.pk topic.pk %}">{{ topic.subject }}</a></td>
-        <td>{{ topic.starter.username }}</td>
-        <td>{{ topic.replies }}</td>
-        <td>{{ topic.views}}</td>
-        <td>{{ topic.last_updated }}</td>
+        <td>
+          <p class="mb-0">
+            <a href="{{ topic_url }}">{{ topic.subject }}</a>
+          </p>
+          <small class="text-muted">
+            Pages:
+            {% for i in topic.get_page_range %}
+              <a href="{{ topic_url }}?page={{ i }}">{{ i }}</a>
+            {% endfor %}
+            {% if topic.has_many_pages %}
+              ... <a href="{{ topic_url }}?page={{ topic.get_page_count }}">Last Page</a>
+            {% endif %}
+          </small>        
+        </td>
+        <td class="align-middle">{{ topic.starter.username }}</td>
+        <td class="align-middle">{{ topic.replies }}</td>
+        <td class="align-middle">{{ topic.views}}</td>
+        <td class="align-middle">{{ topic.last_updated|naturaltime }}</td>
       </tr>
     {% endfor %}
   </tbody>
