--- a/web_project/boards/templates/boards/boards_home.html
+++ b/web_project/boards/templates/boards/boards_home.html
@@ -1,5 +1,7 @@
 {% extends "boards/base_boards.html" %}
 
+{% load humanize %}
+
 {% block breadcrumb %}
 <li class="breadcrumb-item active">Winter's Boards</li>
 {% endblock %}  
@@ -33,7 +35,7 @@
           {% if post %}
             <small>
               <a href="{% url 'boards:topic_posts' board.pk post.topic.pk %}">
-                By {{ post.created_by.username }} at {{ post.created_at }}
+                By {{ post.created_by.username }} - {{ post.created_at|naturaltime }}
               </a>
             </small>
           {% else %}
