--- a/web_project/boards/templates/boards/topic_posts.html
+++ b/web_project/boards/templates/boards/topic_posts.html
@@ -1,8 +1,8 @@
 {{% extends "boards/base_boards.html" %}
 
-{% load static %}
+{% load gravatar %}
 
-{% block title %}{{ topic.subject }}{% endblock %}
+{% block title %}Winter Winn - {{ topic.subject }}{% endblock %}
 
 {% block breadcrumb %}
 <li class="breadcrumb-item"><a href="{% url 'boards:boards_home' %}">Winter's Boards</a></li>
@@ -14,16 +14,15 @@
 <div class="mb-4">
   <a href="{% url 'boards:reply_topic' topic.board.pk topic.pk %}" class="btn btn-primary" role="button">Reply</a>
 </div>
-
 {% for post in posts %}
-  <div class="card mb-2 {% if forloop.first %}border-dark{% endif %}">
+  <div id="{{ post.pk }}" class="card {% if forloop.last %}mb-4{% else %}mb-2{% endif %}{% if forloop.first %}border-dark{% endif %}">
     {% if forloop.first %}
     <div class="card-header text-white bg-dark py-2 px-3">{{ topic.subject }}</div>
     {% endif %}
     <div class="card-body p-3">
       <div class="row">
         <div class="col-2">
-          <img src="{% static 'boards/img/avatar.svg' %}" alt="{{ post.created_by.username }}" class="w-100">
+          <img src="{{ post.created_by|gravatar }}" alt="{{ post.created_by.username }}" class="w-100 rounded">
           <small>Posts: {{ post.created_by.posts.count }}</small>
         </div>
         <div class="col-10">
