--- a/web_project/boards/templates/boards/topic_posts.html
+++ b/web_project/boards/templates/boards/topic_posts.html
@@ -40,6 +40,10 @@
               <a href="{% url 'boards:edit_post' post.topic.board.pk post.topic.pk post.pk %}" 
                 class="btn btn-primary btn-sm" 
                 role="button">Edit</a>
+              <a href="{% url 'boards:delete_post' post.topic.board.pk post.topic.pk post.pk %}" 
+                class="btn btn-outline-secondary btn-sm" 
+                onclick="return confirm('Are you sure you want to delete this?')"
+                role="button">Delete</a>
             </div>
           {% endif %}
         </div>
