--- a/web_project/templates/admin/base_site.html
+++ b/web_project/templates/admin/base_site.html
@@ -1,11 +1,11 @@
 {% extends "admin/base.html" %}
 
-{% block title %}{{ title }} | {{ site_title|default:_('Polls site admin') }}{% endblock %}
+{% block title %}{{ title }} | {{ site_title|default:_('Winter Winn site admin') }}{% endblock %}
 
 {% block branding %}
 <h1 id="site-name">
     <a href="{% url 'admin:index' %}">
-        Polls Administration
+        Winter Winn Administration
 
     </a>
 </h1>
