start a new app Catalog for locallibrary

--- a/web_project/templates/admin/base_site.html
+++ b/web_project/templates/admin/base_site.html
@@ -5,7 +5,7 @@
 {% block branding %}
 <h1 id="site-name">
     <a href="{% url 'admin:index' %}">
-        Winter Winn Administration
+        Winter Winn Site Administration
 
     </a>
 </h1>
