--- a/web_project/catalog/templates/catalog/book_details.html
+++ b/web_project/catalog/templates/catalog/book_details.html
@@ -1,7 +1,10 @@
-{% extends "catalog/base_gen_sidebar.html" %}
-
-{% block content %}
-  <h1>{{ book.title }}</h1>
+{% extends "catalog/base_catalog.html" %}
+{% block breadcrumb %}
+<li class="breadcrumb-item"><a href="{% url 'catalog:index' %}">Local Library</a></li>
+<li class="breadcrumb-item active">Book Details</li>
+{% endblock %}
+{% block libcontent %}
+  <h5>{{ book.title }}</h5>
   <p><strong>Author:</strong> <a href="{% url 'catalog:author-detail' book.author.pk %}">{{ book.author }}</a></p> <!-- author detail link not yet defined -->
   <p><strong>Summary:</strong> {{ book.summary }}</p>
   <p><strong>ISBN:</strong> {{ book.isbn }}</p> 
@@ -26,7 +29,7 @@
             </div>      
           </td>
           <td>
-            {% if copy.status != 'a' %} {{ copy.due_back }} {% endif %}          
+            {% if copy.status != 'a' and copy.due_back %} {{ copy.due_back }} {% endif %}          
           </td>
           <td>
             {{ copy.imprint }}
