--- a/web_project/catalog/templates/catalog/contact.html
+++ b/web_project/catalog/templates/catalog/contact.html
@@ -5,16 +5,20 @@
 <li class="breadcrumb-item active">Contact Us</li>
 {% endblock %}
 {% block libcontent %}
-<h5>Send a message to Winter (the awsome webmaster):</h5>
-<form action="{% url 'catalog:contact' %}" method="post">
-    {% csrf_token %}
-    {% for field in form %}
-        <div class="fieldWrapper">
-            {{ field.errors }}
-            {{ field.label_tag }} <br> 
-            {{ field }}
-        </div>
-    {% endfor %}
-    <input class='button mt-3' type="submit" value="Send Message">
-</form>
+<div class='card w-75 borderless'>
+  <div class='card-body'>
+    <h3 class="card-title mb-5">Send a message to Winter (the webmaster):</h3>
+    <form action="{% url 'catalog:contact' %}" method="post">
+        {% csrf_token %}
+        {% for field in form %}
+            <div class="fieldWrapper mt-3">
+                {{ field.errors }}
+                <strong>{{ field.label_tag }}</strong><br> 
+                {{ field }}
+            </div>
+        {% endfor %}
+        <input class='button btn-lg mt-3' type="submit" value="Send Message">
+    </form>
+  </div>
+</div>
 {% endblock %}
