--- a/web_project/catalog/templates/catalog/index.html
+++ b/web_project/catalog/templates/catalog/index.html
@@ -5,16 +5,23 @@
 {% endblock %}
 
 {% block libcontent %}
-  <h3>Local Library Home</h3>
-  <p>Welcome to LocalLibrary, a website developed by <em>Winter Winn</em>!</p>
-  <h4>About your library</h4>
-  <p>The library has the following record counts:</p>
-  <ul>
-    <li><strong>Books:</strong> {{ num_books }}</li>
-    <li><strong>Copies:</strong> {{ num_instances }}</li>
-    <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
-    <li><strong>Authors:</strong> {{ num_authors }}</li>
-    <li><strong>Genres:</strong> {{ num_genres }}</li>
-    <li><strong>"Winter" books:</strong> {{ num_winter_books }}</li>
-  </ul>
+<div class="card border-0 w-75">
+  <div class="card-body">
+    <h3 class="card-title">Local Library</h3>
+    <p>Welcome to LocalLibrary, a website developed by <em>Winter Winn</em>!</p>
+    <h5>About your library</h5>
+    <p>The library has the following record counts:</p>
+    <ul>
+      <li><strong>Books:</strong> {{ num_books }}</li>
+      <li><strong>Copies:</strong> {{ num_instances }}</li>
+      <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
+      <li><strong>Authors:</strong> {{ num_authors }}</li>
+      <li><strong>Genres:</strong> {{ num_genres }}</li>
+      <li><strong>"Winter" books:</strong> {{ num_winter_books }}</li>
+    </ul>
+    <p>You ({{ user }}) have visited this page 
+      <span class="text-success">{{ num_visits }}</span>
+      {% if num_visits == 1 %} time{% else %} times{% endif %}.</p>
+  </div>
+</div>
 {% endblock %}
