--- a/web_project/catalog/templates/catalog/base_catalog.html
+++ b/web_project/catalog/templates/catalog/base_catalog.html
@@ -3,6 +3,7 @@
 {% load static %}
 {% block stylesheet %}
   <link rel="stylesheet" href="{% static 'catalog/css/catalog.css' %}">
+  <link rel="stylesheet" href="{% static 'catalog/css/jquery-ui.min.css' %}">
 {% endblock %}
 {% block content %}
   <!--
@@ -22,10 +23,14 @@
           {% if user.is_authenticated %}
             <li><span class='ml-1'>User: {{ user.get_username }}</span></li>
             <li><a href="{% url 'catalog:my-borrowed' %}">My Borrowed</a></li>
-            <li><a href="{% url 'accounts:logout'%}?next={{request.path}}">Logout</a></li>   
+            <li><a href="{% url 'accounts:logout' %}?next={{request.path}}">Logout</a></li>   
           {% else %}
-            <li><a href="{% url 'accounts:login'%}?next={{request.path}}">Login</a></li>   
+            <li><a href="{% url 'accounts:login' %}?next={{request.path}}">Login</a></li>   
           {% endif %}         
+          {% if user.is_staff %}
+            <li><span class='ml-1'>Staff:</span></li>
+            <li><a href="{% url 'catalog:all-borrowed' %}">All Borrowed</a></li>
+          {% endif %}
           <li><div class="border-top my-3"></div></li>
           <li><a href="{% url 'catalog:contact' %}">Contact us</a></li>
           <li><a href="{% url 'winter_univer' %}">About Winter</a></li>
