--- a/web_project/catalog/templates/catalog/index.html
+++ b/web_project/catalog/templates/catalog/index.html
@@ -5,20 +5,34 @@
 {% endblock %}
 
 {% block libcontent %}
-<div class="card border-0 w-75">
+<div class="card border-0 w-70">
   <div class="card-body">
     <h3 class="card-title">Local Library</h3>
     <p>Welcome to LocalLibrary, a website developed by <em>Winter Winn</em>!</p>
     <h5>About your library</h5>
     <p>The library has the following record counts:</p>
-    <ul>
-      <li><strong>Books:</strong> {{ num_books }}</li>
-      <li><strong>Copies:</strong> {{ num_instances }}</li>
-      <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
-      <li><strong>Authors:</strong> {{ num_authors }}</li>
-      <li><strong>Genres:</strong> {{ num_genres }}</li>
-      <li><strong>"Winter" books:</strong> {{ num_winter_books }}</li>
-    </ul>
+    <div class='w-50'>
+      <table class="table table-striped mb-4">
+        <tr>
+          <td><strong>Books:</strong></td><td>{{ num_books }}</td>
+        </tr>
+        <tr>
+          <td><strong>Copies:</strong></td><td>{{ num_instances }}</td>
+        </tr>
+        <tr>
+          <td><strong>Copies available:</strong></td><td>{{ num_instances_available }}</td>
+        </tr>
+        <tr>
+          <td><strong>Authors:</strong></td><td>{{ num_authors }}</td>
+        </tr>
+        <tr>
+          <td><strong>Genres:</strong></td><td>{{ num_genres }}</td>
+        </tr>
+        <tr>
+          <td><strong>"Winter" books:</strong></td><td>{{ num_winter_books }}</td>
+        </tr>
+      <table>
+    </div>
     <p>You ({{ user }}) have visited this page 
       <span class="text-success">{{ num_visits }}</span>
       {% if num_visits == 1 %} time{% else %} times{% endif %}.</p>
