--- a/web_project/templates/base.html
+++ b/web_project/templates/base.html
@@ -35,7 +35,7 @@
               </ul>
             {% else %}
               <form class="form-inline ml-auto">
-                <a href="{% url 'accounts:login' %}" class="btn btn-outline-secondary">Log in</a>
+                <a href="{% url 'accounts:login' %}" class="btn bg-light btn-outline-secondary">Log in</a>
                 <a href="{% url 'accounts:signup' %}" class="btn btn-primary ml-2">Sign up</a>
               </form>
             {% endif %}    
