--- a/web_project/catalog/templates/catalog/bookinstance_list_borrowed_staff.html
+++ b/web_project/catalog/templates/catalog/bookinstance_list_borrowed_staff.html
@@ -38,6 +38,7 @@
   {% else %}
   <p>There are no books borrowed.</p>
   {% endif %} 
+  {% include 'include/pagination.html' %}
 </div>
 {% endblock %}
 
