--- a/web_project/catalog/templates/catalog/author_list.html
+++ b/web_project/catalog/templates/catalog/author_list.html
@@ -25,15 +25,17 @@
       <td><a href="{{ author.get_absolute_url }}">{{ author.first_name }} {{ author.last_name }}</a></td>
       <td>{{ author.date_of_birth }}</td>             
       <td>{% if author.date_of_death %}{{ author.date_of_death }} {% else %} - {% endif %}</td> 
+      {% if user.is_staff %}
       <td class="text-right">
-        {% if user.is_staff and perms.catalog.change_author %}
+        {% if perms.catalog.change_author %}
         <a href="{% url 'catalog:author-update' author.pk %}" class="btn-sm btn-secondary mb-1" role="button">Modify</a>
         {% endif %}
-        {% if user.is_staff and perms.catalog.delete_author %}
+        {% if perms.catalog.delete_author %}
         <a href="{% url 'catalog:author-delete' author.pk %}" class="btn-sm btn-secondary mb-1" role="button">Delete</a>
         {% endif %}
       </td>       
-  </tr>
+      {% endif %}
+    </tr>
     {% endfor %}
   </table>
   {% else %}
