--- a/web_project/catalog/templates/catalog/book_details.html
+++ b/web_project/catalog/templates/catalog/book_details.html
@@ -11,7 +11,7 @@
   <p><strong>Language:</strong> {{ book.language }}</p>  
   <p><strong>Genre:</strong> {{ book.genre.all|join:", " }}</p>  
 
-  <div class='card w-75 borderless'>
+  <div class='card borderless'>
     <div class="card-header">Copies</div>
     <div class='card-body'>
       <table class="table table-striped mb-4">
@@ -20,6 +20,7 @@
           <th>Due back</th>
           <th>Imprint</th>
           <th>ID</th>
+          <th>Action</th>
         </tr>
         {% for copy in book.bookinstance_set.all %}
         <tr>
@@ -36,6 +37,14 @@
           </td>        
           <td>
             {{ copy.id }}
+          </td>        
+          <td>
+            {% if copy.status == 'a' %}
+            <a href="{% url 'catalog:test-checkout' copy.id %}" class="btn btn-secondary btn-sm mb-1" >Checkout</a><br>
+            {% endif %} 
+            {% if perms.catalog.can_mark_returned %}
+            <a href="{% url 'catalog:change-book-status-staff' copy.id %}" class="btn-sm btn-secondary" role="button">Change Status</a>
+            {% endif %}
           </td>        
         </tr>
         {% endfor %}
