--- a/web_project/boards/templates/includes/pagination.html
+++ b/web_project/boards/templates/includes/pagination.html
@@ -47,8 +47,8 @@
       <span class="page-link">Last</span>
     </li>
     {% endif %}
-    <li class="page-item disabled mt-3 ml-3">
-      <span class="text-muted">(Total: {{ paginator.num_pages }} pages)</span>
+    <li class="page-item mt-1 ml-3">
+      <small class="text-muted">(Total: {{ paginator.num_pages }} pages)</small>
     </li>
   </ul>
 </nav>
