--- a/web_project/catalog/templates/catalog/author_list.html
+++ b/web_project/catalog/templates/catalog/author_list.html
@@ -11,32 +11,36 @@
   {% endif %}
 </div>
   {% if author_list %}
-  <table class="table table-striped mb-4">
-    <tr>
-      <th>Name</th>
-      <th>Date of Birth</th>
-      <th>Date of Death</th>
-      {% if user.is_staff %}
-      <th></th>
-      {% endif %}
-    </tr>
-    {% for author in author_list %}
-    <tr>
-      <td><a href="{{ author.get_absolute_url }}">{{ author.first_name }} {{ author.last_name }}</a></td>
-      <td>{{ author.date_of_birth }}</td>             
-      <td>{% if author.date_of_death %}{{ author.date_of_death }} {% else %} - {% endif %}</td> 
-      {% if user.is_staff %}
-      <td class="text-right">
-        {% if perms.catalog.change_author %}
-        <a href="{% url 'catalog:author-update' author.pk %}" class="btn-sm btn-secondary mb-1" role="button">Modify</a>
+  <table class="gen-list-view table table-striped table-sm table-hover mb-4">
+    <thead class="thead-light">
+      <tr>
+        <th>Name</th>
+        <th>Date of Birth</th>
+        <th>Date of Death</th>
+        {% if user.is_staff %}
+        <th></th>
         {% endif %}
-        {% if perms.catalog.delete_author %}
-        <a href="{% url 'catalog:author-delete' author.pk %}" class="btn-sm btn-secondary mb-1" role="button">Delete</a>
+      </tr>
+    </thead>
+    <tbody>
+      {% for author in author_list %}
+      <tr>
+        <td><a href="{{ author.get_absolute_url }}">{{ author.first_name }} {{ author.last_name }}</a></td>
+        <td>{{ author.date_of_birth }}</td>             
+        <td>{% if author.date_of_death %}{{ author.date_of_death }} {% else %} - {% endif %}</td> 
+        {% if user.is_staff %}
+        <td class="text-right">
+          {% if perms.catalog.change_author %}
+          <a href="{% url 'catalog:author-update' author.pk %}" class="btn-sm btn-secondary mb-1" role="button">Modify</a>
+          {% endif %}
+          {% if perms.catalog.delete_author %}
+          <a href="{% url 'catalog:author-delete' author.pk %}" class="btn-sm btn-secondary mb-1" role="button">Delete</a>
+          {% endif %}
+        </td>       
         {% endif %}
-      </td>       
-      {% endif %}
-    </tr>
-    {% endfor %}
+      </tr>
+      {% endfor %}
+    </tbody>
   </table>
   {% else %}
     <p>There are no auhtors in the library.</p>
