--- a/web_project/polls/templates/polls/index.html
+++ b/web_project/polls/templates/polls/index.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %}
-
-
+{% extends "base_footer.html" %}
 {% block title %}
 Winter Winn
 {% endblock %}
@@ -20,8 +18,4 @@ Winter Winn
   <a class="list-group-item list-group-item-action" href="winter_univer/">Winter's Website (Python + Flask)</a>
   <a class="list-group-item list-group-item-action" href="face_recognition/">Smart Face Recognition (React + Node + PostgreSQL)</a>
 </div>
-{% endblock %}
-
-{% block breadcrumb %}
-Winter's Homepage
 {% endblock %}
