--- a/web_project/catalog/templates/catalog/bookinstance_list_borrowed_staff.html
+++ b/web_project/catalog/templates/catalog/bookinstance_list_borrowed_staff.html
@@ -4,7 +4,7 @@
 <li class="breadcrumb-item active">Borrowed Books</li>
 {% endblock %}
 {% block libcontent %}
-<div class='card w-75 borderless'>
+<div class='card borderless'>
   {% if bookinstance_list %}
   <div class='card-body'>
     <h3 class="card-title">Borrowed Books</h3>
